# kedis

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md  cm.py  coverage.sh  format.sh  zlog.conf
dox/doxygen/: manual.h
dox/doxygen/related/: cmake.md
include/kedis/klib/: k_list.h  k_vector.h  klib.h
include/kedis/util/: log_util.h
src/: CMakeLists.txt
src/klib/: CMakeLists.txt  k_list.c  k_vector.c
src/main/: CMakeLists.txt  main.c
src/util/: CMakeLists.txt  log_util.c
test/: CMakeLists.txt  test_klib_list.c  test_klib_list.h  testmain.c
